--- a/index.html
+++ b/index.html
@@ -3,27 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hora do Dia</title>
+    <title>Tabuada</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="icon/time-icon.png" type="image/x-icon">
-   
+
 </head>
-<body onload="carregar()">
+<body>
     <header>
-        <h1>Hora do Dia</h1>
+        <h1>Tabuada</h1>
     </header>
     <section>
-        <div id="msg">
-            Aqui vai aparecer a mensagem...
+        <div class="div1">
+            <p>Número: <input type="number" name="num" id="txtn">
+            <input type="button" value="Gerar Tabuada" onclick="tabuada()" ></p>
         </div>
-        <div id="foto">
-            <img id="imagem" src="imagens/manha.png" alt="Foto do dia">
-
+        <div class="div2">
+            <select name="tabuada" id="seltab" size="10">
+            <option>Digite um número acima</option>
+            </select>
         </div>
     </section>
     <footer>
         <p>&copy; Arley.it</p>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
